--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    implementation('com.github.Minestom:Minestom:-SNAPSHOT') {
+    implementation('com.github.Minestom:Minestom:23c76bc799') {
         exclude group: "net.minestom", module: "minestom-data-full"
     }
 
