--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,10 @@ apply plugin: 'java'
 group 'co.aikar'
 version '0.5.0-SNAPSHOT'
 
-compileJava   {
-    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
 }
 
 repositories {
@@ -26,7 +28,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly('com.github.Minestom:Minestom:af9dcf258a') {
+    compileOnly('net.minestom:minestom-snapshots:8736fc43d8') {
         exclude group: "net.minestom", module: "minestom-data-full"
     }
 
