--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,15 @@ buildscript {
     }
 }
 
+plugins {
+    id("maven-publish")
+}
+
 apply plugin: 'java-library'
 apply plugin: 'java'
 
 group 'co.aikar'
-version '0.5.0-SNAPSHOT'
+version '0.5.2-SNAPSHOT'
 
 java {
     toolchain {
@@ -34,4 +38,12 @@ dependencies {
 
     implementation('com.google.guava:guava:31.1-jre')
     api 'co.aikar:acf-core:0.5.1-SNAPSHOT'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
 }
